@@ -941,6 +941,7 @@ Kannan Vijayan
 Kurt Vile
 Norman Vine
 Frank Visser
+Sjoerd de Vries
 Niki W. Waibel
 Wojtek Walczak
 Charles Waldman
